// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormComponents FormInput - Snapshots should match snapshot for basic input 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1C1917",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E7E5E4",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 52,
        "paddingHorizontal": 14,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Enter email"
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1C1917",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          false,
          undefined,
          false,
        ]
      }
      value=""
    />
  </RCTView>
</RCTView>
`;

exports[`FormComponents FormInput - Snapshots should match snapshot for disabled 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1C1917",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F5F5F4",
        "borderColor": "#E7E5E4",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 52,
        "opacity": 0.7,
        "paddingHorizontal": 14,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1C1917",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          false,
          undefined,
          false,
        ]
      }
      value="disabled@example.com"
    />
  </RCTView>
</RCTView>
`;

exports[`FormComponents FormInput - Snapshots should match snapshot for multiline 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1C1917",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Description
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E7E5E4",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 100,
        "paddingHorizontal": 14,
        "paddingVertical": 12,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Description"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={true}
      numberOfLines={4}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1C1917",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          {
            "minHeight": 76,
            "textAlignVertical": "top",
          },
          undefined,
          false,
        ]
      }
      value=""
    />
  </RCTView>
</RCTView>
`;

exports[`FormComponents FormInput - Snapshots should match snapshot with error 1`] = `
<RCTView
  ref={null}
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <RCTText
    ref={null}
    style={
      {
        "color": "#1C1917",
        "fontSize": 14,
        "fontWeight": "600",
        "marginBottom": 8,
      }
    }
    testID="RCTText"
  >
    Email
  </RCTText>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FEF2F2",
        "borderColor": "#EF4444",
        "borderRadius": 12,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "minHeight": 52,
        "paddingHorizontal": 14,
      }
    }
  >
    <RCTTextInput
      accessibilityLabel="Email"
      autoCapitalize="none"
      autoComplete="off"
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A29E"
      ref={null}
      secureTextEntry={false}
      style={
        [
          {
            "color": "#1C1917",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 0,
          },
          false,
          undefined,
          false,
        ]
      }
      value=""
    />
  </RCTView>
  <RCTView
    ref={null}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 4,
        "marginTop": 6,
      }
    }
  >
    <RCTText
      color="#EF4444"
      name="alert-circle"
      ref={null}
      size={14}
      testID="icon-alert-circle"
    >
      alert-circle
    </RCTText>
    <RCTText
      ref={null}
      style={
        {
          "color": "#EF4444",
          "fontSize": 12,
        }
      }
      testID="RCTText"
    >
      Required
    </RCTText>
  </RCTView>
</RCTView>
`;
